--- a/objects/head.html
+++ b/objects/head.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <meta name="author" content="Paul McCormack">
+    <meta name="author" content="Ellen McGurk">
     <meta name="description" content="The second section of Interaction Design Fundamentals looks into the introduction of markup language and the presentation of online content.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Page Title</title>
