changed to html files amd updated.

--- a/objects/head.html
+++ b/objects/head.html
@@ -1,13 +1,9 @@
-
-<!DOCTYPE html>
+<!Doctype html>
 <html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <meta name="author" content="Ellen McGurk">
-    <meta name="description" content="The second section of Interaction Design Fundamentals looks into the introduction of markup language and the presentation of online content.">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Page Title</title>
+  <meta charset="utf-8" />
+  <meta name="author" content="elliemcgurk" >
+  <title> How did Jan Tschichold change design? </title>
+<html lang="en">
+		<link href="css/stylejan.css" type="text/css" rel="stylesheet" />
 
-    <link rel="stylesheet" href="style.css">
-
-</head>
